Added some changes to improve code web app is made, the custom field is left to do

--- a/eda_feature_importance.ipynb
+++ b/eda_feature_importance.ipynb
@@ -188,107 +188,140 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
-    "import sqlite3\n",
-    "\n",
-    "# Connect to the SQLite database to fetch the features\n",
-    "db_file = \"feature_store.db\"\n",
-    "conn = sqlite3.connect(db_file)\n",
-    "\n",
-    "# Fetch the data\n",
-    "query = \"SELECT * FROM features\"\n",
-    "features_df = pd.read_sql_query(query, conn)\n",
-    "\n",
-    "# Close the database connection\n",
-    "conn.close()\n",
-    "\n",
-    "# Quick overview of the data\n",
-    "print(\"Data Overview:\")\n",
-    "print(features_df.info())\n",
-    "print(features_df.describe())\n",
-    "\n",
-    "# --- EDA ---\n",
-    "# Univariate Analysis\n",
-    "plt.figure(figsize=(12, 6))\n",
-    "sns.histplot(features_df[\"aqi\"], bins=20, kde=True)\n",
-    "plt.title(\"AQI Distribution\")\n",
-    "plt.xlabel(\"AQI\")\n",
-    "plt.ylabel(\"Frequency\")\n",
-    "plt.show()\n",
-    "\n",
-    "# Bivariate Analysis\n",
-    "plt.figure(figsize=(12, 6))\n",
-    "sns.scatterplot(data=features_df, x=\"weather_temperature\", y=\"aqi\", alpha=0.7)\n",
-    "plt.title(\"AQI vs Temperature\")\n",
-    "plt.xlabel(\"Temperature (°C)\")\n",
-    "plt.ylabel(\"AQI\")\n",
-    "plt.show()\n",
-    "\n",
-    "numeric_features_df = features_df.select_dtypes(include=[np.number])\n",
-    "\n",
-    "# Correlation Matrix\n",
-    "plt.figure(figsize=(14, 8))\n",
-    "correlation_matrix = numeric_features_df.corr()\n",
-    "sns.heatmap(correlation_matrix, annot=True, fmt=\".2f\", cmap=\"coolwarm\", vmin=-1, vmax=1)\n",
-    "plt.title(\"Correlation Matrix\")\n",
-    "plt.show()\n",
-    "\n",
-    "# --- Feature Importance ---\n",
-    "# Prepare the data\n",
-    "X = features_df.drop(columns=[\"aqi\", \"date\"])\n",
-    "y = features_df[\"aqi\"]\n",
-    "\n",
-    "# Handle missing values separately for numeric and non-numeric columns\n",
-    "numeric_columns = X.select_dtypes(include=[\"number\"]).columns\n",
-    "non_numeric_columns = X.select_dtypes(exclude=[\"number\"]).columns\n",
-    "\n",
-    "# Fill missing values for numeric columns with their mean\n",
-    "X[numeric_columns] = X[numeric_columns].fillna(X[numeric_columns].mean())\n",
-    "\n",
-    "# Fill missing values for non-numeric columns with a placeholder\n",
-    "X[non_numeric_columns] = X[non_numeric_columns].fillna(\"Unknown\")\n",
-    "\n",
-    "# Label Encoding for categorical data\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "label_encoders = {}\n",
-    "for col in non_numeric_columns:\n",
-    "    le = LabelEncoder()\n",
-    "    X[col] = le.fit_transform(X[col])\n",
-    "    label_encoders[col] = le\n",
+    "import sqlite3\n",
+    "import logging\n",
     "\n",
-    "# Save processed data\n",
-    "processed_data = pd.concat([X, y], axis=1)\n",
-    "processed_data.to_csv(\"processed_data.csv\", index=False)\n",
-    "print(\"Processed data saved to 'processed_data.csv'.\")\n",
+    "# Configure logging\n",
+    "logging.basicConfig(level=logging.INFO, format=\"%(asctime)s - %(levelname)s - %(message)s\")\n",
     "\n",
-    "# Train-test split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "def fetch_data_from_db(db_file, query):\n",
+    "    \"\"\"Fetches data from SQLite database.\"\"\"\n",
+    "    try:\n",
+    "        conn = sqlite3.connect(db_file)\n",
+    "        features_df = pd.read_sql_query(query, conn)\n",
+    "        conn.close()\n",
+    "        logging.info(\"Data successfully fetched from the database.\")\n",
+    "        return features_df\n",
+    "    except Exception as e:\n",
+    "        logging.error(f\"Error fetching data from database: {e}\")\n",
+    "        raise\n",
     "\n",
-    "# Fit Random Forest for Feature Importance\n",
-    "rf_model = RandomForestRegressor(random_state=42)\n",
-    "rf_model.fit(X_train, y_train)\n",
+    "def validate_data(features_df):\n",
+    "    \"\"\"Validates if required columns exist in the dataframe.\"\"\"\n",
+    "    required_columns = [\"aqi\", \"date\"]\n",
+    "    missing_columns = [col for col in required_columns if col not in features_df.columns]\n",
+    "    if missing_columns:\n",
+    "        raise ValueError(f\"Missing required columns: {missing_columns}\")\n",
+    "    logging.info(\"All required columns are present in the data.\")\n",
     "\n",
-    "# Evaluate the model\n",
-    "y_pred = rf_model.predict(X_test)\n",
-    "print(f\"Random Forest - RMSE: {np.sqrt(mean_squared_error(y_test, y_pred))}\")\n",
-    "print(f\"Random Forest - MAE: {mean_absolute_error(y_test, y_pred)}\")\n",
-    "print(f\"Random Forest - R²: {r2_score(y_test, y_pred)}\")\n",
+    "def plot_univariate(features_df, column, title, xlabel, ylabel):\n",
+    "    \"\"\"Plots a histogram for univariate analysis.\"\"\"\n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    sns.histplot(features_df[column], bins=20, kde=True, color=\"blue\")\n",
+    "    plt.title(title)\n",
+    "    plt.xlabel(xlabel)\n",
+    "    plt.ylabel(ylabel)\n",
+    "    plt.show()\n",
     "\n",
-    "# Feature Importance\n",
-    "feature_importances = pd.DataFrame({\n",
-    "    \"Feature\": X.columns,\n",
-    "    \"Importance\": rf_model.feature_importances_\n",
-    "}).sort_values(by=\"Importance\", ascending=False)\n",
+    "def plot_bivariate(features_df, x_column, y_column, title, xlabel, ylabel):\n",
+    "    \"\"\"Plots a scatterplot for bivariate analysis.\"\"\"\n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    sns.scatterplot(data=features_df, x=x_column, y=y_column, alpha=0.7)\n",
+    "    plt.title(title)\n",
+    "    plt.xlabel(xlabel)\n",
+    "    plt.ylabel(ylabel)\n",
+    "    plt.show()\n",
     "\n",
-    "print(\"Top 10 Important Features:\")\n",
-    "print(feature_importances.head(10))\n",
+    "def plot_correlation_matrix(numeric_features_df):\n",
+    "    \"\"\"Plots a heatmap for the correlation matrix.\"\"\"\n",
+    "    plt.figure(figsize=(14, 8))\n",
+    "    correlation_matrix = numeric_features_df.corr()\n",
+    "    sns.heatmap(correlation_matrix, annot=True, fmt=\".2f\", cmap=\"coolwarm\", vmin=-1, vmax=1)\n",
+    "    plt.title(\"Correlation Matrix\")\n",
+    "    plt.show()\n",
     "\n",
-    "# Plot Feature Importances\n",
-    "plt.figure(figsize=(12, 6))\n",
-    "sns.barplot(x=\"Importance\", y=\"Feature\", data=feature_importances.head(10))\n",
-    "plt.title(\"Top 10 Feature Importances\")\n",
-    "plt.xlabel(\"Importance\")\n",
-    "plt.ylabel(\"Feature\")\n",
-    "plt.show()\n"
+    "def process_data(features_df):\n",
+    "    \"\"\"Processes data for modeling, including missing value handling and encoding.\"\"\"\n",
+    "    X = features_df.drop(columns=[\"aqi\", \"date\"])\n",
+    "    y = features_df[\"aqi\"]\n",
+    "\n",
+    "    # Handle missing values\n",
+    "    numeric_columns = X.select_dtypes(include=[\"number\"]).columns\n",
+    "    non_numeric_columns = X.select_dtypes(exclude=[\"number\"]).columns\n",
+    "\n",
+    "    X[numeric_columns] = X[numeric_columns].fillna(X[numeric_columns].mean())\n",
+    "    X[non_numeric_columns] = X[non_numeric_columns].fillna(\"Unknown\")\n",
+    "\n",
+    "    # Label encode non-numeric columns\n",
+    "    label_encoders = {}\n",
+    "    for col in non_numeric_columns:\n",
+    "        le = LabelEncoder()\n",
+    "        X[col] = le.fit_transform(X[col])\n",
+    "        label_encoders[col] = le\n",
+    "\n",
+    "    logging.info(\"Data processing complete.\")\n",
+    "    return X, y\n",
+    "\n",
+    "def train_and_evaluate_model(X, y):\n",
+    "    \"\"\"Trains a Random Forest model and evaluates it.\"\"\"\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "    rf_model = RandomForestRegressor(random_state=42)\n",
+    "    rf_model.fit(X_train, y_train)\n",
+    "\n",
+    "    y_pred = rf_model.predict(X_test)\n",
+    "    logging.info(f\"Random Forest - RMSE: {np.sqrt(mean_squared_error(y_test, y_pred)):.2f}\")\n",
+    "    logging.info(f\"Random Forest - MAE: {mean_absolute_error(y_test, y_pred):.2f}\")\n",
+    "    logging.info(f\"Random Forest - R²: {r2_score(y_test, y_pred):.2f}\")\n",
+    "\n",
+    "    return rf_model\n",
+    "\n",
+    "def plot_feature_importances(rf_model, feature_names):\n",
+    "    \"\"\"Plots the top 10 feature importances.\"\"\"\n",
+    "    feature_importances = pd.DataFrame({\n",
+    "        \"Feature\": feature_names,\n",
+    "        \"Importance\": rf_model.feature_importances_\n",
+    "    }).sort_values(by=\"Importance\", ascending=False)\n",
+    "\n",
+    "    logging.info(\"Top 10 Important Features:\")\n",
+    "    logging.info(feature_importances.head(10))\n",
+    "\n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    sns.barplot(x=\"Importance\", y=\"Feature\", data=feature_importances.head(10), palette=\"viridis\")\n",
+    "    plt.title(\"Top 10 Feature Importances\")\n",
+    "    plt.xlabel(\"Importance\")\n",
+    "    plt.ylabel(\"Feature\")\n",
+    "    plt.show()\n",
+    "\n",
+    "def main():\n",
+    "    db_file = \"feature_store.db\"\n",
+    "    query = \"SELECT * FROM features\"\n",
+    "\n",
+    "    # Step 1: Fetch data\n",
+    "    features_df = fetch_data_from_db(db_file, query)\n",
+    "\n",
+    "    # Step 2: Validate data\n",
+    "    validate_data(features_df)\n",
+    "\n",
+    "    # Step 3: Exploratory Data Analysis (EDA)\n",
+    "    logging.info(\"Starting EDA...\")\n",
+    "    plot_univariate(features_df, \"aqi\", \"AQI Distribution\", \"AQI\", \"Frequency\")\n",
+    "    plot_bivariate(features_df, \"weather_temperature\", \"aqi\", \"AQI vs Temperature\", \"Temperature (°C)\", \"AQI\")\n",
+    "    numeric_features_df = features_df.select_dtypes(include=[np.number])\n",
+    "    plot_correlation_matrix(numeric_features_df)\n",
+    "\n",
+    "    # Step 4: Data Processing\n",
+    "    X, y = process_data(features_df)\n",
+    "\n",
+    "    # Step 5: Train and Evaluate Model\n",
+    "    rf_model = train_and_evaluate_model(X, y)\n",
+    "\n",
+    "    # Step 6: Feature Importance\n",
+    "    plot_feature_importances(rf_model, X.columns)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   }
  ],
